changed the skills section to a carousel . The card size still needs adjustment and the js calculation must be fixed to align the section.

--- a/collab/collab.css
+++ b/collab/collab.css
@@ -3,11 +3,8 @@ body {
   font-family: 'Poppins', sans-serif;
   background: #fef3c7;
   color: #333;
-  display: grid;
-  justify-items: center;
-  
 }
-
+/*  --- HERO ---*/
 .hero {
   position: relative;
   height: 25vh;
@@ -16,11 +13,12 @@ body {
   flex-direction: column;
   align-items: center;
   color : rgb(188, 129, 107);
+  margin-bottom: .7em;
  
 }
 .hero > h1 {
   font-family: "Dancing Script", sans-serif;
-  margin-top: 1%;
+  margin-top: 4%;
   font-size: 2.3em;
   width: 80vw;
   
@@ -28,7 +26,7 @@ body {
 .hero > h3{
  width: 80%;
  justify-content: center;
- margin-top: 0;
+ margin-top: 2%;
 }
 .hero > img {
   position: absolute;
@@ -37,36 +35,84 @@ body {
   object-fit: cover;
   z-index: -2;
 }
+
+/* --- FEATURED AND WORKED WITH ---*/
  .featured{
-  border: solid red 1px;
   display: grid;
   justify-items: center;
   font-family: 'Poppins', sans-serif;
   font-size: small;
+  margin-bottom: .7em;
+    background-color: lightcoral;
  }
 .featured > div > img {
-  width : 55px;
+  width : 70px;
   margin-right: 2px;
 }
 
-h3{
+#skills > h3{
   width: 80%;
+  justify-self: center;
+  background-color: lightcoral;
   text-align: center;
 }
-.skills{
-  border: 1px red solid;
-  display: grid;
-  justify-items: center;
-  grid-row-gap: 8px;
-  
+
+/* --- SKILLS ---*/
+
+.carousel {
+  position: relative;
+  overflow: hidden;
+  max-width: 900px;
+  margin: auto;
+  overscroll-behavior: contain;
 }
-.card{
+.carousel-inner {
+  display: flex;
+  transition: transform 0.5s ease;
+  touch-action: none;
+  -webkit-overflow-scrolling: auto;
+  will-change: transform;
+}
+
+.carousel-inner.is-swiping {
+  transition: none !important;
+}
+.card {
+  min-width: 80%;
   background: white;
-  width: 70%;
   border-radius: 12px;
   margin: 0 0.5rem;
   padding: 1rem;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   font-family: 'Poppins', sans-serif;
+}
+
+#journey-prev { left: 10px; }
+#journey-next { right: 10px; }
+
+
+/* --- WHAT BREADS SAY --- */
+.testimonials{
+  display: grid;
+  justify-items: center;
+}
+
+.testimonials > img{
+  width: 80%;
+}
+
+/* --- CALL TO ACTION*/
+.cta{
+  display: grid;
+  width: 80%;
   text-align: center;
+}
+.cta > h3 {
+  justify-self: center;
+  margin-bottom: 0;
+}
+/* --- CONTACT US --- */
+.contact{
+  display: grid;
+  width: 80%;
 }
